# simple-render-rs

./: Cargo.toml  LICENSE  README.md
render/: Cargo.toml
render/src/: display.rs  geometry.rs  helper.rs  lib.rs  transform.rs
resource/study/: img2-clear.tga  img2-horizontally.tga  img2-scale.tga  img2-transform.tga  img2-vertically.tga  img2.tga
study/: Cargo.toml
study/src/: helper.rs  study1.rs  study10.rs  study11.rs  study2.rs  study3.rs  study4.rs  study5.rs  study6.rs  study7.rs  study8.rs  study9.rs
