[package]
name = "study"
version = "0.1.0"
edition = "2021"

[[bin]]
name = 'study1'
path = 'src/study1.rs'

[[bin]]
name = 'study2'
path = 'src/study2.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
minifb = "0.24.0"
