[package]
name = "study"
version = "0.1.0"
edition = "2021"

[[bin]]
name = 'study1'
path = 'src/study1.rs'

[[bin]]
name = 'study2'
path = 'src/study2.rs'

[[bin]]
name = 'study3'
path = 'src/study3.rs'

[[bin]]
name = 'study4'
path = 'src/study4.rs'

[[bin]]
name = 'study5'
path = 'src/study5.rs'

[[bin]]
name = 'study6'
path = 'src/study6.rs'

[[bin]]
name = 'study7'
path = 'src/study7.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.19"
minifb = "0.24.0"
obj = "0.10.2"
render = { path = "../render" }
